force-app/main/default/objects/JBCXM__UsageTracker__c/JBCXM__UsageTracker__c.object-meta.xml
<CustomObject>
    <description>This object is used for real time usage tracking.</description>
    <label>Usage Tracker</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Usage Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>