force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <inlineHelpText>Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usage Tracker</relationshipLabel>
    <relationshipName>UsageTrackerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>