force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__ActionTime__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActionTime__c</fullName>
    <description>To Tracks the time when the usage action occurred</description>
    <inlineHelpText>Action date and time.</inlineHelpText>
    <label>Action Time</label>
    <type>DateTime</type>
</CustomField>