force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__AdoptionMeasure__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AdoptionMeasure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the the adoption measure being tracked. This is the action that is being tracked.</description>
    <inlineHelpText>Adoption Measure.</inlineHelpText>
    <label>Adoption Measure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>JBCXM__PickList__c.JBCXM__Category__c</field>
            <operation>equals</operation>
            <value>Adoption Measure Types</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Usage Tracker</relationshipLabel>
    <relationshipName>UsageTracker</relationshipName>
    <type>Lookup</type>
</CustomField>