force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__Browser__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Browser__c</fullName>
    <description>To track the browser that was used where this usage occurred.</description>
    <inlineHelpText>Browser from where the Action occurred.</inlineHelpText>
    <label>Browser</label>
    <length>80</length>
    <type>Text</type>
</CustomField>