force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__BrowserResolutoin__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__BrowserResolutoin__c</fullName>
    <description>To track the resolutions of the browser on the device from where the Usage occurred</description>
    <inlineHelpText>Resolution of the device where the action occurred.</inlineHelpText>
    <label>Browser Resolutoin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>