force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__Comments__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Comments__c</fullName>
    <description>General comments on the usage action</description>
    <inlineHelpText>Comments.</inlineHelpText>
    <label>Comments</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>