force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__Device__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Device__c</fullName>
    <description>To track the device from where the usage action occurred.</description>
    <inlineHelpText>Device where the action occurred.</inlineHelpText>
    <label>Device</label>
    <length>80</length>
    <type>Text</type>
</CustomField>