force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__IPAddress__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IPAddress__c</fullName>
    <description>IP address from where the usage action occurred.</description>
    <inlineHelpText>IP address from where the usage action occurred.</inlineHelpText>
    <label>IP Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>