force-app/main/default/objects/JBCXM__UsageTracker__c/fields/JBCXM__UserName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserName__c</fullName>
    <description>User name or Email. (We recommend email).</description>
    <inlineHelpText>Email or UserName of the user how did the action.</inlineHelpText>
    <label>User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>